# jlcpcb-cli

./: .gitignore  README.md  pyproject.toml
src/jlcpcb_cli/: __main__.py  cli.py
src/jlcpcb_cli/core/: auth.py  browser.py  client.py  orders.py  parts.py  util.py  web_client.py  web_orders.py  web_parts.py
tests/: test_orders.py  test_parts.py  test_web_client.py  test_web_parts.py
