[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jlcpcb-cli"
dynamic = ["version"]
description = "Command-line interface to JLCPCB order data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "playwright>=1.40.0",
]

[project.scripts]
jlcpcb-cli = "jlcpcb_cli.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.dynamic]
version = {attr = "jlcpcb_cli.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
